--- a/news_app/style.css
+++ b/news_app/style.css
@@ -2,12 +2,8 @@
   background: rgba(0, 0, 0, 0.7);
 }
 .progress {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: #fff;
-  z-index: 1;
+  display: block;
+  background-color: transparent;
 }
 
 .news-container .grid-container {
